# ghcopilot-devdays-samples-msfoundry

./: .gitignore  README.md
foundry-chat-app/: .env  .env.example  README.md
foundry-chat-app/backend/: pyproject.toml  requirements.txt
foundry-chat-app/backend/src/: app.py
foundry-chat-app/backend/src/api/: chat.py
foundry-chat-app/backend/src/models/: schemas.py
foundry-chat-app/backend/src/services/: agent_service.py  auth.py  chat_service.py  foundry_client.py
foundry-chat-app/frontend/: package-lock.json  package.json
foundry-chat-app/frontend/public/: index.html
foundry-chat-app/frontend/src/: App.css  App.tsx
foundry-chat-app/frontend/src/components/: ChatWindow.tsx  MessageInput.tsx  MessageList.tsx
foundry-chat-app/frontend/src/services/: api.ts
powerpoint-presentation/: GitHub Copilot Dev Days - GH Copilot + Microsoft Foundry - Sao Jose dos Campos.pptx
